# CMake file for the library target
PROJECT(LIBMV2DSIM)

file(GLOB_RECURSE  SRCS_LIST "${${PROJECT_NAME}_SOURCE_DIR}/src/*.cpp")
file(GLOB_RECURSE  HRDS_LIST "${${PROJECT_NAME}_SOURCE_DIR}/include/mv2dsim/*.h")
file(GLOB_RECURSE  INTERNAL_HDRS_LIST "${${PROJECT_NAME}_SOURCE_DIR}/src/*.h")

# Declare the target (a library)
ADD_LIBRARY(mv2dsim ${SRCS_LIST} ${INTERNAL_HDRS_LIST} ${HRDS_LIST})
TARGET_LINK_LIBRARIES(mv2dsim ${MRPT_LIBS} ${BOX2D_LIBRARIES})
